worked on part-2, filled out schema, two queries

--- a/part-2/package.json
+++ b/part-2/package.json
@@ -15,7 +15,9 @@
     "mocha": "^4.0.1"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "db:create": "psql -f schema.sql",
+    "db:seed":"psql -f load-data.sql"
   },
   "author": "",
   "license": "ISC"
